--- a/src/languages/id/settings.json
+++ b/src/languages/id/settings.json
@@ -1,6 +1,5 @@
 {
     "title": "Pengaturan",
-    "avatar_change": "Ganti avatar",
     "signout": "Keluar",
     "appearance": "Tampilan",
     "theme": "Tema",
@@ -14,33 +13,36 @@
     "git_repository": "Repositori Git",
     "version": "Versi",
     "copyright": "Hak Cipta",
-    "copyright_text": "© 2025 Agape Dimas. Seluruh hak cipta dilindungi undang-undang.",
+    "copyright_text": "Seluruh hak cipta dilindungi undang-undang.",
     "add_account": "Tambah",
-    "cancel": "Batal",
-    "create": "Buat",
     "create_account_title": "Buat Akun",
-    "username": "Nama pengguna",
-    "nickname": "Panggilan",
-    "url": "URL",
-    "role": "Peran",
-    "password": "Kata sandi",
-    "placeholder_username": "cth: john_smith",
-    "placeholder_nickname": "cth: John Smith",
-    "placeholder_url": "cth: https://instagram.com/john.smith_",
-    "placeholder_password": "Kuat dan mudah diingat",
-    "signout_confirm_title": "Yakin Mau Keluar?",
+    "username_label": "Nama pengguna",
+    "username_placeholder": "cth: john_smith",
+    "nickname_label": "Panggilan",
+    "nickname_placeholder": "cth: John Smith",
+    "url_label": "URL",
+    "url_placeholder": "cth: https://instagram.com/john.smith_",
+    "role_label": "Peran",
+    "password_label": "Kata sandi",
+    "password_placeholder": "Kuat dan mudah diingat",
+    "signout_confirm_title": "Yakin mau keluar?",
     "signout_confirm_desc": "Kamu dapat masuk kembali kapan saja.",
     "create_account_error_title": "Gagal Membuat Akun",
-    "error_generic": "Ada yang salah.",
-    "dismiss": "Tutup",
+    
+    "avatar_change": "Ganti avatar",
     "avatar_upload_error_title": "Gagal Mengupload Avatar",
     "avatar_upload_error_size": "Ukuran file maksimum adalah 2MB.",
     "avatar_upload_success_title": "Berhasil Upload",
     "avatar_upload_success_message": "Avatar telah berhasil disetel.",
-
-    "context_delete": "Hapus",
+    
+    "cancel": "Batal",
+    "create": "Buat",
+    "dismiss": "Tutup",
     "delete": "Hapus",
+    "context_delete": "Hapus",
     "delete_account_confirm_title": "Yakin mau hapus akun ini?",
     "delete_account_confirm_desc": "Akses akun ini bakal dicabut, tapi mata kuliah, topik, dan soal yang pernah dibuat bakal tetep ada.",
-    "delete_error_title": "Gagal Menghapus"
+    "delete_error_title": "Gagal Menghapus",
+    
+    "error_generic": "Ada yang salah."
 }
