--- a/src/languages/id/problems.json
+++ b/src/languages/id/problems.json
@@ -6,7 +6,7 @@
     "dismiss": "Tutup",
     
     "delete_problem_confirm_title": "Yakin mau hapus soal ini?",
-    "delete_problem_confirm_desc": "Solusinya juga bakal ikut kehapus. Aksi ini gak bisa dibatalin.",
+    "delete_problem_confirm_desc": "Jawabannya juga bakal ikut kehapus. Aksi ini gak bisa dibatalin.",
     "delete_error_title": "Gagal Menghapus",
     
     "empty_problems_title": "Belum Ada Soal",
@@ -14,5 +14,7 @@
     "notfound_topic_title": "Topik Tidak Ditemukan",
     "notfound_topic_subtitle": "Mungkin sudah dipindahkan atau dihapus.",
 
-    "error_generic": "Terjadi suatu kesalahan."
+    "error_generic": "Ada yang salah.",
+
+    "sources": "[ \"\", \"Kuis\", \"Ujian Tengah Semester\", \"Ujian Akhir Semester\" ]"
 }
