--- a/src/languages/id/signin.json
+++ b/src/languages/id/signin.json
@@ -5,7 +5,7 @@
     "password": "Kata sandi",
 
     "error_incorrect": "Nama pengguna atau kata sandi salah",
-    "error_nointernet": "Hubungkan ke internetNama pengguna atau kata sandi salah",
+    "error_nointernet": "Hubungkan ke internet",
     "error_server": "Server lagi ada masalah. Coba sebentar lagi.",
     "error_generic": "Ada yang salah"
 }
