Patched some issues
- Added letter list
- Added auto-refresh for topic details when a problem is submitted or deleted
- Fixed sorting issue
- Fixed grouping issue

--- a/src/languages/id/topics.json
+++ b/src/languages/id/topics.json
@@ -21,7 +21,7 @@
     
     "source_header": "Sumber Soal",
     "type_label": "Tipe",
-    "academic_year_label": "Tahun Ajaran",
+    "academic_year_label": "Tahun Akademik",
     "academic_year_placeholder": "cth: 2025",
     
     "markdown_tab": "Markdown",
