Updated some layouts
- Added logo for print paper
- Fixed lettered list order

--- a/src/languages/id/courses.json
+++ b/src/languages/id/courses.json
@@ -19,7 +19,7 @@
     "cancel": "Batal",
     "create": "Buat",
     "save": "Simpan",
-    "rename": "Ganti Nama",
+    "rename": "Ganti",
     "delete": "Hapus",
     "clear": "Hapus",
     "dismiss": "Tutup",
