--- a/src/languages/en/settings.json
+++ b/src/languages/en/settings.json
@@ -13,7 +13,7 @@
     "git_repository": "Git Repository",
     "version": "Version",
     "copyright": "Copyright",
-    "copyright_text": "All rights reserved.",
+    "copyright_text": "All exam content is copyrighted by Universitas Katolik Parahyangan.",
     "add_account": "Add",
     "create_account_title": "Create Account",
     "username_label": "Username",
