--- a/src/languages/id/settings.json
+++ b/src/languages/id/settings.json
@@ -13,7 +13,7 @@
     "git_repository": "Repositori Git",
     "version": "Versi",
     "copyright": "Hak Cipta",
-    "copyright_text": "Seluruh hak cipta dilindungi undang-undang.",
+    "copyright_text": "Seluruh konten naskah soal adalah hak cipta dari Universitas Katolik Parahyangan.",
     "add_account": "Tambah",
     "create_account_title": "Buat Akun",
     "username_label": "Nama pengguna",
