--- a/src/languages/jp/settings.json
+++ b/src/languages/jp/settings.json
@@ -13,7 +13,7 @@
     "git_repository": "Gitリポジトリ",
     "version": "バージョン",
     "copyright": "著作権",
-    "copyright_text": "全著作権所有。",
+    "copyright_text": "すべての試験内容の著作権は、Universitas Katolik Parahyanganに帰属します。",
     "add_account": "追加",
     "create_account_title": "アカウント作成",
     "username_label": "ユーザー名",
