--- a/src/languages/kr/problems.json
+++ b/src/languages/kr/problems.json
@@ -13,6 +13,10 @@
     "empty_problems_subtitle": "추가된 문제는 여기에 표시됩니다.",
     "notfound_topic_title": "주제를 찾을 수 없음",
     "notfound_topic_subtitle": "이동되었거나 삭제되었을 수 있습니다.",
+    "offline_topic_title": "오프라인 상태예요",
+    "offline_topic_subtitle": "인터넷에 연결해 주세요.",
+    "unknownerror_topic_title": "오류가 발생했어요",
+    "unknownerror_topic_subtitle": "현재 서버에 문제가 발생했어요.",
 
     "error_generic": "문제가 발생했습니다.",
 
