--- a/src/languages/kr/settings.json
+++ b/src/languages/kr/settings.json
@@ -13,7 +13,7 @@
     "git_repository": "Git 저장소",
     "version": "버전",
     "copyright": "저작권",
-    "copyright_text": "모든 권리 보유.",
+    "copyright_text": "모든 시험 콘텐츠의 저작권은 Universitas Katolik Parahyangan에 있어요.",
     "add_account": "추가",
     "create_account_title": "계정 만들기",
     "username_label": "사용자 이름",
