--- a/src/languages/jp/courses.json
+++ b/src/languages/jp/courses.json
@@ -9,6 +9,11 @@
     "tooltip_new_course": "新規コース作成",
     "tooltip_edit_course": "コースを編集",
     "tooltip_new_topic": "新規トピック作成",
+    "tooltip_filter": "フィルター",
+    "filter_all": "すべて",
+    "filter_sortby": "並び順",
+    "filter_semester": "セメスター{0}",
+    "filter_default": "デフォルト",
     "pinned": "ピン留めされたコース",
     "pinned_all": "すべてのピン",
     "pins": "ピン",
@@ -37,7 +42,7 @@
     "description_placeholder": "例: コーディングスキルを磨くためのコース。",
     "id_label": "ID",
     "id_placeholder": "例: AIF2301062",
-    "semester_label": "学期",
+    "semester_label": "セメスター",
     "semester_placeholder": "例: 1",
     "sks_label": "単位数",
     "sks_placeholder": "例: 3",
