--- a/src/languages/jp/mentor.json
+++ b/src/languages/jp/mentor.json
@@ -2,7 +2,7 @@
     "title": "メンター",
 
     "welcome_title": "メンターへようこそ",
-    "welcome_description": "最近、先生はすごく忙しいけど、もっと練習が必要なんだ。そんな時はメンターにお任せ。TAみたいに、君の学習をサポートしてくれるよ。",
+    "welcome_description": "最近、先生はすごく忙しいけど、もっと練習が必要なんだ。そんな時はメンターにお任せ。TAみたいに、君の学習をサポートするよ。",
 
     "readyfor_title": "試験の準備はOK？",
     "readyfor_description": "メンターと一緒に試験対策をしよう。",
@@ -14,5 +14,12 @@
     "features_update_title": "毎日更新",
     "features_update_description": "毎日新しい練習問題をリクエストして、スキルアップしよう。",
 
-    "generating": "問題を作成中です。通常5〜7分かかります。"
+    "generating": "問題を作成中です。通常5〜7分かかります。",
+
+    "metadata_updated": "{0}に更新",
+    "metadata_problems": "選択問題{0}問",
+    "metadata_aigenerated": "AIが生成",
+    "metadata_score": "スコアは{0}点",
+
+    "results_view": "結果を見る"
 }
