--- a/src/languages/en/problems.json
+++ b/src/languages/en/problems.json
@@ -1,13 +1,17 @@
 {
     "context_edit": "Edit",
     "context_delete": "Delete",
+    "context_moveto": "Move to...",
     "delete": "Delete",
     "cancel": "Cancel",
     "dismiss": "Dismiss",
     
+    "move_title": "Move to...",
+    "move_error_title": "Failed to Move",
+
     "delete_problem_confirm_title": "Are you sure you want to delete this problem?",
     "delete_problem_confirm_desc": "The solution will also be deleted. This action cannot be undone.",
-    "delete_error_title": "Deletion Failed",
+    "delete_error_title": "Failed to Delete",
     
     "empty_problems_title": "No Problems Yet",
     "empty_problems_subtitle": "Added problems will appear here.",
