--- a/src/languages/kr/problems.json
+++ b/src/languages/kr/problems.json
@@ -1,9 +1,13 @@
 {
     "context_edit": "수정",
     "context_delete": "삭제",
+    "context_moveto": "이동...",
     "delete": "삭제",
     "cancel": "취소",
     "dismiss": "닫기",
+    
+    "move_title": "이동...",
+    "move_error_title": "이동에 실패했습니다",
     
     "delete_problem_confirm_title": "이 문제를 정말 삭제하시겠습니까?",
     "delete_problem_confirm_desc": "풀이도 함께 삭제됩니다. 이 작업은 되돌릴 수 없습니다.",
