--- a/src/languages/en/problems.json
+++ b/src/languages/en/problems.json
@@ -1,4 +1,6 @@
 {
+    "title": "Problems",
+    
     "context_edit": "Edit",
     "context_delete": "Delete",
     "context_moveto": "Move to...",
